==> llnbn/allanSE/blinkyInterrupt/src/platform/tm4c123/InterruptHandler.cpp <==
#include "inc/InterruptHandler.hpp"

void InterruptHandler::setInterruptHandler(GpioIn& gpio)
{
  /* Get the GPIO port and pin */
  uint32_t port = gpio.getGpioConfig().port;
  uint8_t pin   = gpio.getGpioConfig().pin;

  /* Select the pin number */
  if (pin == GPIO_PIN_0) 	  pin = 0;
  else if (pin == GPIO_PIN_1) pin = 1;
  else if (pin == GPIO_PIN_2) pin = 2;
  else if (pin == GPIO_PIN_3) pin = 3;
  else if (pin == GPIO_PIN_4) pin = 4;
  else if (pin == GPIO_PIN_5) pin = 5;
  else if (pin == GPIO_PIN_6) pin = 6;
  else if (pin == GPIO_PIN_7) pin = 7;

  /* Store a pointer to the GPIO object in the interrupt vector */
  if (port == GPIO_PORTA_BASE) {
	IntPrioritySet(INT_GPIOA, 0xE0); //menor nível de prioridade (0 é o maior)
	GPIOA_interruptVector_[pin] = &gpio;
  }
  else if (port == GPIO_PORTB_BASE) {
	IntPrioritySet(INT_GPIOB, 0xE0);
	GPIOB_interruptVector_[pin] = &gpio;
  }
  else if (port == GPIO_PORTC_BASE) {
	IntPrioritySet(INT_GPIOC, 0xE0);
	GPIOC_interruptVector_[pin] = &gpio;
  }
  else if (port == GPIO_PORTD_BASE) {
	IntPrioritySet(INT_GPIOD, 0xE0);
	GPIOD_interruptVector_[pin] = &gpio;
  }
  else if (port == GPIO_PORTE_BASE) {
	IntPrioritySet(INT_GPIOE, 0xE0);
	GPIOE_interruptVector_[pin] = &gpio;
  }
  else if (port == GPIO_PORTF_BASE){
	IntPrioritySet(INT_GPIOF, 0xE0);
	GPIOF_interruptVector_[pin] = &gpio;
  }
}

void InterruptHandler::clearInterruptHandler(GpioIn& gpio)
{
  /* Get the GPIO port and pin */
  uint32_t port = gpio.getGpioConfig().port;
  uint8_t pin   = gpio.getGpioConfig().pin;

  /* Select the pin number */
  if (pin == GPIO_PIN_0) 	  pin = 0;
  else if (pin == GPIO_PIN_1) pin = 1;
  else if (pin == GPIO_PIN_2) pin = 2;
  else if (pin == GPIO_PIN_3) pin = 3;
  else if (pin == GPIO_PIN_4) pin = 4;
  else if (pin == GPIO_PIN_5) pin = 5;
  else if (pin == GPIO_PIN_6) pin = 6;
  else if (pin == GPIO_PIN_7) pin = 7;

  /* Remove the pointer to the GPIO object in the interrupt vector */
  if (port == GPIO_PORTA_BASE) GPIOA_interruptVector_[pin] = nullptr;
  else if (port == GPIO_PORTB_BASE) GPIOB_interruptVector_[pin] = nullptr;
  else if (port == GPIO_PORTC_BASE) GPIOC_interruptVector_[pin] = nullptr;
  else if (port == GPIO_PORTD_BASE) GPIOD_interruptVector_[pin] = nullptr;
  else if (port == GPIO_PORTE_BASE) GPIOE_interruptVector_[pin] = nullptr;
  else if (port == GPIO_PORTF_BASE) GPIOF_interruptVector_[pin] = nullptr;

}

void InterruptHandler::setInterruptHandler(Timer& timer_) {
  /* Get the TIMER base */
  uint32_t base = timer_.getConfig().base;
  uint32_t source = timer_.getConfig().source;

  if (base == TIMER0_BASE) {
	  if ( (source == TIMER_A) || (source == TIMER_BOTH) ) TIMER0_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER0_interruptVector_[1] = &timer_;
  }
  else if (base == TIMER1_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER1_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER1_interruptVector_[1] = &timer_;
  }
  else if (base == TIMER2_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER2_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER2_interruptVector_[1] = &timer_;
  }
  else if (base == TIMER3_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER3_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER3_interruptVector_[1] = &timer_;
  }
  else if (base == TIMER4_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER4_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER4_interruptVector_[1] = &timer_;
  }
  else if (base == TIMER5_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER5_interruptVector_[0] = &timer_;
	  else if (source == TIMER_B) TIMER5_interruptVector_[1] = &timer_;
  }
}

void InterruptHandler::clearInterruptHandler(Timer& timer_)
{
  /* Get the TIMER base */
  uint32_t base = timer_.getConfig().base;
  uint32_t source = timer_.getConfig().source;

  if (base == TIMER0_BASE) {
	  if ( (source == TIMER_A) || (source == TIMER_BOTH)) TIMER0_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER0_interruptVector_[1] = nullptr;
  }
  else if (base == TIMER1_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER1_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER1_interruptVector_[1] = nullptr;
  }
  else if (base == TIMER2_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER2_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER2_interruptVector_[1] = nullptr;
  }
  else if (base == TIMER3_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER3_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER3_interruptVector_[1] = nullptr;
  }
  else if (base == TIMER4_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER4_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER4_interruptVector_[1] = nullptr;
  }
  else if (base == TIMER5_BASE) {
	  if ((source == TIMER_A) || (source == TIMER_BOTH)) TIMER5_interruptVector_[0] = nullptr;
	  else if (source == TIMER_B) TIMER5_interruptVector_[1] = nullptr;
  }
}

void InterruptHandler::GPIOA_InterruptHandler(void) {
	GPIO_InterruptHandler(GPIO_PORTA_BASE, GPIOA_interruptVector_);
}

void InterruptHandler::GPIOB_InterruptHandler(void) {
	GPIO_InterruptHandler(GPIO_PORTB_BASE, GPIOB_interruptVector_);
}

void InterruptHandler::GPIOC_InterruptHandler(void) {
	GPIO_InterruptHandler(GPIO_PORTC_BASE, GPIOC_interruptVector_);
}

void InterruptHandler::GPIOD_InterruptHandler(void) {
	GPIO_InterruptHandler(GPIO_PORTD_BASE, GPIOD_interruptVector_);
}

void InterruptHandler::TIMER0_InterruptHandler(void){
  TIMER_InterruptHandler(TIMER0_BASE, TIMER0_interruptVector_);
}

void InterruptHandler::TIMER1_InterruptHandler(void){
  TIMER_InterruptHandler(TIMER1_BASE, TIMER1_interruptVector_);
}

void InterruptHandler::TIMER2_InterruptHandler(void){
  TIMER_InterruptHandler(TIMER2_BASE, TIMER2_interruptVector_);
}

void InterruptHandler::TIMER3_InterruptHandler(void){
  TIMER_InterruptHandler(TIMER3_BASE, TIMER3_interruptVector_);
}
